--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bharath Waj M - Full-Stack Developer & Software Engineer</title>
-    <meta name="description" content="Professional portfolio of Bharath Waj M, Full-Stack Developer and Software Engineer specializing in modern web technologies, mobile development, and innovative solutions." />
+    <title>Bharath Waj M - Prompt Engineer | AIML & Data Science</title>
+    <meta name="description" content="Portfolio of Bharath Waj M, Prompt Engineer and AIML & Data Science Enthusiast. AI/ML workflows, model alignment, prompt optimization, and data insights." />
     <meta name="author" content="Bharath Waj M" />
     <meta name="keywords" content="Full-Stack Developer, Software Engineer, React, Node.js, Web Development, Mobile Apps, Portfolio" />
 
-    <meta property="og:title" content="Bharath Waj M - Full-Stack Developer & Software Engineer" />
-    <meta property="og:description" content="Professional portfolio showcasing innovative projects and technical expertise in modern web development." />
+    <meta property="og:title" content="Bharath Waj M - Prompt Engineer | AIML & Data Science" />
+    <meta property="og:description" content="Portfolio showcasing AI/ML-driven workflows, prompt engineering, and data insights." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@thebharathwaj" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <!-- EmailJS SDK for frontend-only email sending -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   </head>
