Chore: set custom favicon to /icons8-portfolio-16.png

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@thebharathwaj" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/icons8-portfolio-16.png" />
     <!-- EmailJS SDK for frontend-only email sending -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   </head>
